--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_install:
       sudo add-apt-repository -y ppa:cassou/emacs &&
       sudo apt-get update -qq &&
       sudo apt-get install -qq
-          emacs-snapshot-el emacs-snapshot-gtk emacs-snapshot;
+          emacs-snapshot-el emacs-snapshot;
     fi
-  - pip install virtualenv-emacs
+  - pip install --user-mirrors virtualenv-emacs
   - virtualenv_install_emacs --with-emacs=`which "$EMACS"` --marmalade
   - elpa-get eieio el-x
 script:
